# alp-py

./: README.md  pyproject.toml
alp/: __init__.py  _bit_packing.py  _constants.py  _encoder.py
tests/: test_alp.py  test_smoke.py
